--- a/assets/style/scss/_variables.scss
+++ b/assets/style/scss/_variables.scss
@@ -7,5 +7,7 @@ $success: #4caf50;
 $warning: #ffc107;
 
 $border-color: #e6e6e6;
-
+$border-radius: 4px;
 $bottom-nav-height: 50px;
+
+$divider-height: 10px;
