--- a/assets/style/scss/app.scss
+++ b/assets/style/scss/app.scss
@@ -34,9 +34,14 @@
   white-space: nowrap;
 }
 .text-muted {
-  color: rgba(0,0,0,.7)
+  color: rgba(0, 0, 0, 0.7) !important;
 }
 .icon--text {
-  font-size: 1.25em;
-  margin-right: .5em;
+  font-size: 1.25em !important;
+  margin-right: 0.5em;
+  + .icon--text {
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
