--- a/assets/style/scss/app.scss
+++ b/assets/style/scss/app.scss
@@ -7,11 +7,11 @@
 .border-top {
   border-top: 1px solid $border-color !important;
 }
+.border-right {
+  border-right: 1px solid $border-color !important;
+}
 .border-bottom {
   border-bottom: 1px solid $border-color !important;
-  &:last-child {
-    border-bottom: none !important;
-  }
 }
 
 .bordered {
