--- a/assets/style/scss/app.scss
+++ b/assets/style/scss/app.scss
@@ -3,6 +3,11 @@
   width: 50px;
   border-radius: 50%;
 }
+.avatar-lg {
+  max-width: 100%;
+  width: 65px;
+  border-radius: 50%;
+}
 
 .border-top {
   border-top: 1px solid $border-color !important;
@@ -28,8 +33,8 @@
   border-radius: $border-radius;
 }
 .simple-svg-wrapper {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: $svg-icon-width;
+  height: $svg-icon-width;
   .simple-svg {
     width: inherit;
     height: inherit;
@@ -60,6 +65,9 @@
   input {
     text-align: right;
   }
+}
+.text-rtl {
+  direction: rtl;
 }
 input[type='number'] {
   &::-webkit-inner-spin-button,
