--- a/assets/style/scss/app.scss
+++ b/assets/style/scss/app.scss
@@ -8,6 +8,11 @@
   width: 65px;
   border-radius: 50%;
 }
+.avatar-sm {
+  max-width: 100%;
+  width: 35px;
+  border-radius: 50%;
+}
 
 .border-top {
   border-top: 1px solid $border-color !important;
@@ -61,7 +66,7 @@
   flex: 0 0 auto !important;
 }
 .input-rtl {
-  &input,
+  &.input,
   input {
     text-align: right;
   }
