--- a/assets/style/scss/app.scss
+++ b/assets/style/scss/app.scss
@@ -1,26 +1,24 @@
-.avatar {
-  max-width: 100%;
-  width: 50px;
-  border-radius: 50%;
-  img {
-    max-width: 100%;
-  }
-}
+.avatar,
+.avatar-sm,
 .avatar-lg {
   max-width: 100%;
-  width: 65px;
   border-radius: 50%;
   img {
     max-width: 100%;
   }
 }
+
 .avatar-sm {
-  max-width: 100%;
   width: 35px;
-  border-radius: 50%;
-  img {
-    max-width: 100%;
-  }
+}
+.avatar {
+  width: 50px;
+}
+.avatar-lg {
+  width: 65px;
+}
+.avatar-xl {
+  width: 80px;
 }
 
 .border-top {
@@ -123,6 +121,12 @@ a {
 .h-100 {
   height: 100%;
 }
+.min-h-100 {
+  min-height: 100%;
+}
 .w-100 {
   width: 100%;
+}
+button img {
+  width: 75px;
 }
