--- a/assets/style/scss/_variables.scss
+++ b/assets/style/scss/_variables.scss
@@ -6,8 +6,11 @@ $info: #2196f3;
 $success: #4caf50;
 $warning: #ffc107;
 
+$white: #ffffff;
+
 $border-color: #e6e6e6;
 $border-radius: 2px;
+$top-nav-height: 48px;
 $bottom-nav-height: 50px; //?
 
 $divider-height: 10px;
