--- a/assets/style/scss/app.scss
+++ b/assets/style/scss/app.scss
@@ -75,6 +75,10 @@
   width: $svg-icon-width * 1.5;
   height: $svg-icon-width * 1.5;
 }
+.svg-lg {
+  width: $svg-icon-width * 2;
+  height: $svg-icon-width * 2;
+}
 .text-truncate {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -144,4 +148,24 @@ a {
 }
 button img {
   width: 75px;
+}
+
+.cart::after {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
+  content: '';
+  border-top: 0.3em solid;
+  border-right: 0.3em solid transparent;
+  border-bottom: 0;
+  border-left: 0.3em solid transparent;
+}
+.rich-text {
+  white-space: pre-wrap;
+}
+.bm-view {
+  width: 100%;
+  height: 200px;
 }
