--- a/assets/style/scss/app.scss
+++ b/assets/style/scss/app.scss
@@ -34,14 +34,14 @@
 .border-right__list {
   position: relative;
   &:not(:last-child):after {
-            content: '';
-            position: absolute;
-            height: 100%;
-            width: 1em;
-            top: 0;
-            right: 0;
-            border-right: 1px solid $border-color;
-        }
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 1em;
+    top: 0;
+    right: 0;
+    border-right: 1px solid $border-color;
+  }
 }
 .border-bottom {
   border-bottom: 1px solid $border-color !important;
@@ -187,7 +187,7 @@ button img {
 .rich-text {
   white-space: pre-wrap;
 }
-.bm-view {
+.map-view {
   width: 100%;
   height: 200px;
 }
