--- a/assets/style/scss/_variables.scss
+++ b/assets/style/scss/_variables.scss
@@ -9,6 +9,7 @@ $warning: #ffc107;
 $white: #ffffff;
 
 $border-color: #e6e6e6;
+$border-color-dark: #9e9e9e ;
 $border-radius: 2px;
 $top-nav-height: 48px;
 $bottom-nav-height: 50px; //?
@@ -19,3 +20,5 @@ $size1: 12px;
 $size2: 14px;
 
 $svg-icon-width: 1.5rem;
+
+$tag-space: $size1 / 2;
