--- a/assets/style/scss/app.scss
+++ b/assets/style/scss/app.scss
@@ -192,3 +192,9 @@ button img {
   width: 100%;
   height: 200px;
 }
+.btn-fancy {
+    border: 0;
+    background-color: $primary;
+    box-shadow: 0 0 0 6px rgba($primary, 0.6), 0 0 0 12px rgba($primary, 0.3);
+    border-radius: 50%;
+}
