--- a/assets/style/scss/_variables.scss
+++ b/assets/style/scss/_variables.scss
@@ -13,6 +13,7 @@ $border-color-dark: #9e9e9e;
 $border-radius: 2px;
 $top-nav-height: 48px;
 $bottom-nav-height: 56px; //?
+$wechat-nav-bar-height: 64px;
 
 $divider-height: 10px;
 
